Made some changes.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title><%= @title %></title>
-    <!-- <link rel="stylesheet" href="/stylesheets/book_viewer.css"> -->
-    <link href="<%= url('/stylesheets/book_viewer.css') %>" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="/stylesheets/book_viewer.css">
+    <!-- <link href="<%= url('xyz/stylesheets/book_viewer.css') %>" rel="stylesheet" type="text/css" /> -->
   </head>
 
   <body>
