Added href to the "Table of Contents" heading.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,7 +21,7 @@
     <div class="column-layout">
 
       <div class="toc">
-        <h3>Table of Contents</h3>
+        <a href="/"<h3>Table of Contents</h3>></a>
         <ol>
           <% @table_of_contents.each_with_index do |chapter, index| %>
           <li>
