--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,7 +21,9 @@
     <div class="column-layout">
 
       <div class="toc">
-        <a href="/"><h3>Table of Contents</h3></a>
+        <div class="toc-heading">
+          <a href="/"><h3>Table of Contents</h3></a>
+        </div>
         <ol>
           <% @table_of_contents.each_with_index do |chapter, index| %>
           <li>
